<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_chat"
        android:icon="@mipmap/ic_chat_white"
        android:title="@string/message"/>

    <item
        android:id="@+id/navigation_contact"
        android:icon="@mipmap/ic_people"
        android:title="@string/contact"/>

    <item
        android:id="@+id/navigation_bazaar"
        android:icon="@mipmap/ic_home"
        android:title="@string/store"/>

    <item
        android:id="@+id/navigation_vitrin"
        android:icon="@mipmap/ic_special"
        android:title="@string/vitrin"/>

    <item
        android:id="@+id/navigation_more"
        android:icon="@mipmap/ic_about"
        android:title="@string/about_us" />

</menu>