<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/oval_background_text_unit" />

    <ImageView
        android:id="@+id/image_size_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_size_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/product_size"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="15dp"
        android:typeface="sans"
        app:layout_constraintTop_toBottomOf="@+id/image_size_icon" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="330dp"
        app:layout_constraintTop_toBottomOf="@+id/product_size_text">

        <TextView
            android:id="@+id/length"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/length"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp"
            app:layout_constraintLeft_toLeftOf="@+id/Thickness"
            app:layout_constraintRight_toRightOf="@id/Thickness" />

        <TextView
            android:id="@+id/Width"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/Width"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp"
            app:layout_constraintLeft_toLeftOf="@+id/Thickness"
            app:layout_constraintRight_toRightOf="@id/Thickness"
            app:layout_constraintTop_toBottomOf="@+id/length" />


        <TextView
            android:id="@+id/Height"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/Height"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp"
            app:layout_constraintLeft_toLeftOf="@+id/Thickness"
            app:layout_constraintRight_toRightOf="@id/Thickness"
            app:layout_constraintTop_toBottomOf="@+id/Width" />

        <TextView
            android:id="@+id/Thickness"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/Thickness"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Height" />

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/size"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Thickness" />

        <TextView
            android:id="@+id/alloy"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/alloy"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/size" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/size_recycle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/Thickness"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/accept_size_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/oval_accept_unit"
        android:padding="5dp"
        android:text="@string/accept"
        android:textColor="#fff"
        android:textSize="15dp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>