<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_chair_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/chair_ironwork"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/about_chair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/about_chair_first"
        android:textColor="@color/icon"
        android:textSize="13dp"
        app:layout_constraintTop_toBottomOf="@id/text_chair_first" />

    <Button
        android:id="@+id/button_more_info_first"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/sign_up"
        android:text="@string/more_info"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_chair" />

    <ImageView
        android:id="@+id/image_google_about"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/google"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_chair" />

    <ImageView
        android:id="@+id/image_twitter_about"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/twitter"
        app:layout_constraintLeft_toRightOf="@id/image_google_about"
        app:layout_constraintTop_toBottomOf="@+id/about_chair" />

    <ImageView
        android:id="@+id/image_facebook_about"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/facebook"
        app:layout_constraintRight_toLeftOf="@id/image_google_about"
        app:layout_constraintTop_toBottomOf="@+id/about_chair" />

    <Button
        android:id="@+id/button_call_about"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/sign_up"
        android:text="@string/quick_call"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_chair" />

    <Button
        android:id="@+id/button_visit_about"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ring_orange"
        android:text="@string/visit"
        android:textColor="@color/light_orange"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_chair" />

</android.support.constraint.ConstraintLayout>