<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/infinite_bg"
    tools:context=".activities.ForgetPasswordActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/login_back"
        android:layout_margin="20dp"
        android:padding="20dp">

        <TextView
            android:id="@+id/text_forget1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/inter_phone"
            android:textColor="@color/textColor"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_forget2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/verify_will_be_sent"
            android:textSize="12dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_forget1" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_text_forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_forget2">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phone_edit_text_forget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@mipmap/ic_phone"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textAlignment="viewStart"
                android:textSize="15dp"
                tools:ignore="MissingPrefix" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_get_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_up"
            android:text="@string/get_verify"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15dp"
            android:elevation="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/phone_text_forget" />


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>